Fix tabbed bullet list spacing

--- a/src/ghost-writer-editor/src/App.css
+++ b/src/ghost-writer-editor/src/App.css
@@ -356,9 +356,17 @@
 }
 
 .preview__content li:has(> input[type='checkbox']) {
-  display: flex;
-  align-items: flex-start;
-  gap: var(--space-2);
+  display: grid;
+  grid-template-columns: 16px minmax(0, 1fr);
+  align-items: start;
+  column-gap: var(--space-2);
+}
+
+.preview__content li:has(> input[type='checkbox']) > ul,
+.preview__content li:has(> input[type='checkbox']) > ol {
+  grid-column: 2;
+  margin: var(--space-2) 0 0;
+  padding-left: var(--space-5);
 }
 
 .preview__checkbox {
